js/js.translator/testData/incremental/invalidation/interfaceOpenMethods/lib1/InterfaceC.0.kt
interface C : B {
    fun testC1() = 3
}
